[tool.poetry]
name = "causal-discovery"
version = "0.1.0"
description = "machine learning experiments on causal discovery"
authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
flake8 = "^3.8.3"
pylint = "^2.5.3"
mypy = "^0.782"
pytest = "^6.0.1"
notebook = "^6.1.3"
jupyterlab = "^2.2.5"
ppscore = "^1.1.1"
pandas = "^1.1.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
